test: some changes in test sample (static serving)

--- a/tests/web-app/static/static-page.html
+++ b/tests/web-app/static/static-page.html
@@ -1,11 +1,20 @@
 <!doctype html>
 <html lang="en-US">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>This is an static page</title>
-  </head>
-  <body>
-    <img src="images/firefox-icon.png" alt="My test image" />
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width" />
+  <title>This is a static page</title>
+</head>
+
+<body>
+  <img src="https://picsum.photos/200/300?random=1" alt="My test image" />
+  <div>Hello from a static page!</div>
+
+  <script src="script.js"></script>
+  <script>
+    console.log("Hello from script tag!")
+  </script>
+</body>
+
 </html>
